--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -50,5 +50,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./release.zip
-          asset_name: release.zip
+          asset_name: WSLHostPatcher.zip
           asset_content_type: application/zip
